--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dim10"
         android:src="@drawable/ic_login"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dim36"
             android:gravity="center"
-            android:text="用户名："/>
+            android:text="用户名：" />
 
         <EditText
             android:id="@+id/edtUserName"
@@ -38,14 +39,14 @@
             android:hint="请输入用户名"
             android:inputType="textPersonName"
             android:maxLength="20"
-            android:textSize="@dimen/txt12"/>
+            android:textSize="@dimen/txt12" />
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dim36"
             android:gravity="center"
-            android:text="密码："/>
+            android:text="密码：" />
 
         <EditText
             android:id="@+id/edtPassword"
@@ -56,22 +57,41 @@
             android:hint="请输入密码"
             android:inputType="textPassword"
             android:maxLength="20"
-            android:textSize="@dimen/txt12"/>
+            android:textSize="@dimen/txt12" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dim36"
             android:gravity="center"
-            android:text="车辆编号："/>
+            android:text="班次：" />
 
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:background="@color/white">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+
+            <Spinner
+                android:id="@+id/spnWorkTime"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim36"
+                android:entries="@array/worktime" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dim36"
+            android:gravity="center"
+            android:text="车辆编号：" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+
             <Spinner
                 android:id="@+id/spnCarNum"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dim48"
-                />
+                android:layout_height="@dimen/dim36" />
         </LinearLayout>
 
 
