--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -37,6 +37,7 @@
             android:background="@drawable/shape_rec_normal"
             android:ems="10"
             android:hint="请输入用户名"
+            android:text="demo"
             android:inputType="textPersonName"
             android:maxLength="20"
             android:textSize="@dimen/txt12" />
@@ -55,6 +56,7 @@
             android:background="@drawable/shape_rec_normal"
             android:ems="10"
             android:hint="请输入密码"
+            android:text="demo"
             android:inputType="textPassword"
             android:maxLength="20"
             android:textSize="@dimen/txt12" />
