--- a/app/src/main/res/layout/activity_poisearch2.xml
+++ b/app/src/main/res/layout/activity_poisearch2.xml
@@ -70,6 +70,7 @@
     <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         layout="@layout/inc_address_tabs" >
     </include>
 
