--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/bmapView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@color/white"
-        android:clickable="true"/>
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_top"
@@ -20,7 +14,7 @@
         android:paddingRight="@dimen/dim10"
         android:background="@color/white"
         android:layout_alignParentTop="true"
-        android:visibility="gone">
+        android:visibility="visible">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim30">
@@ -43,13 +37,14 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="总耗时"/>
+
             <TextView
                 android:id="@+id/txtAllTime"
                 android:layout_width="0dp"
-                android:layout_weight="3"
                 android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:gravity="center_vertical"
-                android:text="20M"/>
+                android:text="20M" />
         </LinearLayout>
 
         <LinearLayout
@@ -84,6 +79,15 @@
         </LinearLayout>
     </LinearLayout>
 
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/bmapView"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/white"
+        android:layout_above="@+id/ll_bottom"
+        android:layout_below="@+id/ll_top"
+        android:clickable="true"/>
     <!--底部操作按钮-->
     <LinearLayout
         android:id="@+id/ll_bottom"
@@ -219,6 +223,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:layout_marginRight="@dimen/dim5"
                 android:text="等待"/>
 
@@ -227,6 +232,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:layout_marginRight="@dimen/dim5"
                 android:text="回程"/>
 
@@ -236,6 +242,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/dim5"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:text="再出发"/>
 
             <Button
@@ -247,4 +254,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
