--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="tcccccc">#cccccc</color>
     <color name="t0b0b0b">#0b0b0b</color>
     <color name="t999999">#999999</color>
+    <color name="red">#e24949</color>
 </resources>
