--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -5,7 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginRight="@dimen/dim20"
+    android:layout_marginLeft="@dimen/dim20"
     tools:context="cn.people.weever.activity.order.OrderClearingActivity">
+
+    <!-- 路线-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_weight="1">
+
+            <include
+                layout="@layout/inc_line"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim1"></include>
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/dim5"
+            android:layout_marginRight="@dimen/dim5"
+            android:gravity="center"
+            android:text="계산하다" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_weight="1">
+
+            <include
+                layout="@layout/inc_line"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dim1"></include>
+        </LinearLayout>
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,6 +85,9 @@
         </LinearLayout>
     </LinearLayout>
 
+
+    <!-- 金额-->
+    <include layout="@layout/inc_line"></include>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dim48">
@@ -108,59 +153,112 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim48"
             android:gravity="center"
             android:text="150RMB"
-            android:textColor="@color/red"/>
+            android:textColor="@color/red" />
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim48">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="起步费用/스타트도 가격"
                 android:layout_alignParentLeft="true"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="起步费用/스타트도 가격" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_alignParentRight="true"
-                android:text="15RMB"/>
+                android:gravity="center"
+                android:text="15RMB" />
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim48">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="公里数/이정 비용（50킬로미터）"
                 android:layout_alignParentLeft="true"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="公里数/이정 비용（50킬로미터）" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_alignParentRight="true"
-                android:text="100RMB"/>
+                android:gravity="center"
+                android:text="100RMB" />
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim48">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="超时费用/초과 요금（35Minute）"
                 android:layout_alignParentLeft="true"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:text="超时费用/초과 요금（35Minute）" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_alignParentRight="true"
-                android:text="35RMB"/>
+                android:gravity="center"
+                android:text="35RMB" />
         </RelativeLayout>
+    </LinearLayout>
+
+    <!-- 计价-->
+   <include layout="@layout/inc_line"></include>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dim36"
+            android:gravity="center"
+            android:text="结算方式/결제 방법" />
+
+        <Spinner
+            android:id="@+id/spn_settlement_first"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim36"
+            android:entries="@array/settlement" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+"
+        android:textColor="@color/red"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dim36"
+            android:gravity="center"
+            android:text="结算方式/결제 방법" />
+
+        <Spinner
+            android:id="@+id/spn_settlement_second"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim36"
+            android:entries="@array/settlement" />
     </LinearLayout>
 </LinearLayout>
