--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -14,7 +14,7 @@
         android:paddingRight="@dimen/dim10"
         android:background="@color/white"
         android:layout_alignParentTop="true"
-        android:visibility="visible">
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dim30">
