--- a/app/src/main/res/layout/activity_trackquery.xml
+++ b/app/src/main/res/layout/activity_trackquery.xml
@@ -10,7 +10,7 @@
             android:layout_alignParentTop="true"
             android:orientation="vertical">
 
-        <!--<include layout="@layout/activity_top"></include>-->
+        <include layout="@layout/inc_toolbar_title"></include>
 
     </LinearLayout>
 
