--- a/app/src/main/res/layout/inc_toolbar_title.xml
+++ b/app/src/main/res/layout/inc_toolbar_title.xml
@@ -8,11 +8,9 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
 
-        <ImageView
-            android:id="@+id/img_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_arrow_left"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
@@ -21,5 +19,14 @@
             android:textSize="16sp"
             android:textColor="@color/white"
             android:gravity="center"/>
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dim5"
+            android:src="@drawable/ic_action_arrow_left"/>
+        </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 </LinearLayout>
