--- a/app/src/main/res/layout/item_test1.xml
+++ b/app/src/main/res/layout/item_test1.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dim_48"
+        android:layout_height="@dimen/dim48"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -23,7 +23,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dim_48"
+        android:layout_height="@dimen/dim48"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dim_48"
+        android:layout_height="@dimen/dim48"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
