--- a/app/src/main/res/layout/inc_line.xml
+++ b/app/src/main/res/layout/inc_line.xml
@@ -5,5 +5,5 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/red" />
+        android:background="@color/secondaryText" />
 </LinearLayout>
