--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -132,9 +132,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="left|center"
-                    android:text="半日租费用/한나절 임대:"/>
+                    android:text="半日租费用"/>
 
                 <EditText
                     android:layout_width="0dp"
@@ -158,9 +158,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="left|center"
-                    android:text="日租费用/나절 임대:"/>
+                    android:text="日租费用"/>
 
                 <EditText
                     android:layout_width="0dp"
@@ -184,9 +184,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="left|center"
-                    android:text="接送机费用/한나절 임대:"/>
+                    android:text="接送机费用"/>
 
                 <EditText
                     android:layout_width="0dp"
@@ -223,9 +223,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:gravity="left|center"
-                        android:text="起步费用/스타트도 가격"/>
+                        android:text="起步费用"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -249,9 +249,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:gravity="left|center"
-                        android:text="公里数/이정 비용（50킬로미터）"/>
+                        android:text="公里数（50公里）"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -273,11 +273,12 @@
                     android:layout_height="@dimen/dim48">
 
                     <TextView
+                        android:id="@+id/textView5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="2"
                         android:gravity="left|center"
-                        android:text="超时费用/초과 요금（35Minute）"/>
+                        android:text="超时费用（35Minute）"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -305,38 +306,47 @@
                 android:background="@color/white">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
                     android:layout_height="@dimen/dim36"
-                    android:gravity="center"
-                    android:text="结算方式/결제 방법"/>
+                    android:gravity="left|center"
+                    android:text="结算方式"/>
 
                 <Spinner
                     android:id="@+id/spn_settlement_first"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="@dimen/dim36"
+                    android:layout_weight="1"
                     android:entries="@array/settlement"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="2"
                 android:layout_height="wrap_content"
                 android:text="+"
+                android:gravity="center"
                 android:textColor="@color/red"/>
-
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
                     android:layout_height="@dimen/dim36"
-                    android:gravity="center"
-                    android:text="结算方式/결제 방법"/>
+                    android:gravity="left|center"
+                    android:text="结算方式"/>
 
                 <Spinner
                     android:id="@+id/spn_settlement_second"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="@dimen/dim36"
                     android:entries="@array/settlement"/>
             </LinearLayout>
