--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -83,5 +83,5 @@
             android:gravity="center_vertical"
             android:text="预约中"/>
     </LinearLayout>
-
+    <include layout="@layout/inc_line"></include>
 </LinearLayout>
