--- a/app/src/main/res/layout/fragment_my_orders.xml
+++ b/app/src/main/res/layout/fragment_my_orders.xml
@@ -10,7 +10,9 @@
     <ListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:scrollbars="none">
 
     </ListView>
 
