--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.people.weever.activity.order.OrderClearingActivity">
-
     <LinearLayout
         android:id="@+id/layout_top"
         android:layout_width="match_parent"
@@ -136,7 +135,7 @@
                     android:gravity="left|center"
                     android:text="半日租费用"/>
 
-                <EditText
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -162,7 +161,8 @@
                     android:gravity="left|center"
                     android:text="日租费用"/>
 
-                <EditText
+                <TextView
+                    android:id="@+id/editText"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -188,7 +188,7 @@
                     android:gravity="left|center"
                     android:text="接送机费用"/>
 
-                <EditText
+                <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -208,13 +208,100 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dim48"
-                    android:gravity="center"
-                    android:text="150RMB"
-                    android:textColor="@color/red"
-                    android:textSize="20sp"/>
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/dim10"
+                        android:layout_weight="1"
+                        android:gravity="right|center"
+                        android:text="会员编号"
+                        android:textSize="20sp"/>/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="left|center"
+                        android:layout_height="@dimen/dim48"
+                        android:text="C907842"
+                        android:textColor="@color/red"
+                        android:textSize="20sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim48"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/dim10"
+                        android:layout_weight="1"
+                        android:gravity="right|center"
+                        android:text="折扣前费用"
+                        android:textSize="20sp"/>/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="left|center"
+                        android:layout_height="@dimen/dim48"
+                        android:text="150RMB"
+                        android:textColor="@color/red"
+                        android:textSize="20sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim48"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="right|center"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/dim10"
+                        android:text="折扣后费用"
+                        android:textSize="20sp"/>/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="left|center"
+                        android:layout_height="@dimen/dim48"
+                        android:text="135RMB"
+                        android:textColor="@color/red"
+                        android:textSize="20sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim48"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="right|center"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="@dimen/dim10"
+                        android:text="总费用打折"
+                        android:textSize="20sp"/>/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:gravity="left|center"
+                        android:layout_height="@dimen/dim48"
+                        android:text="90%"
+                        android:textColor="@color/red"
+                        android:textSize="20sp"/>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -278,7 +365,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="2"
                         android:gravity="left|center"
-                        android:text="超时费用（35Minute）"/>
+                        android:text="乘车时间（35Minute）"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -286,6 +373,32 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="35"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="RMB"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dim48">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"
+                        android:gravity="left|center"
+                        android:text="等待时间（5Minute）"/>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="0"
                         android:textSize="18sp"/>
 
                     <TextView
@@ -307,8 +420,8 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="@dimen/dim36"
+                    android:layout_weight="2"
                     android:gravity="left|center"
                     android:text="结算方式"/>
 
@@ -318,19 +431,27 @@
                     android:layout_height="@dimen/dim36"
                     android:layout_weight="1"
                     android:entries="@array/settlement"/>
+                <EditText
+                    android:layout_width="@dimen/dim96"
+                    android:layout_height="@dimen/dim48"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="10"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
-                android:text="+"
-                android:gravity="center"
-                android:textColor="@color/red"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="center"
+                    android:text="+"
+                    android:textColor="@color/red"/>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -338,20 +459,28 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="@dimen/dim36"
+                    android:layout_weight="2"
                     android:gravity="left|center"
                     android:text="结算方式"/>
 
                 <Spinner
                     android:id="@+id/spn_settlement_second"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="@dimen/dim36"
+                    android:layout_weight="1"
                     android:entries="@array/settlement"/>
+                <EditText
+                    android:layout_width="@dimen/dim96"
+                    android:layout_height="@dimen/dim48"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="10"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
+
 
 
     <LinearLayout
