--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -175,16 +175,6 @@
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/radioBtnHalfDayUse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/dim10"
-                android:background="@drawable/shape_rec_normal"
-                android:checked="true"
-                android:text="半日租">
-            </RadioButton>
-
-            <RadioButton
                 android:id="@+id/radioBtnDayUse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -195,12 +185,19 @@
             </RadioButton>
 
             <RadioButton
+                android:id="@+id/radioBtnHalfDayUse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dim10"
+                android:background="@drawable/shape_rec_normal"
+                android:text="半日租">
+            </RadioButton>
+            <RadioButton
                 android:id="@+id/radioBtnTransfer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/dim10"
                 android:background="@drawable/shape_rec_normal"
-                android:checked="true"
                 android:text="接送机">
             </RadioButton>
         </RadioGroup>
@@ -223,7 +220,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_marginRight="@dimen/dim5"
                 android:text="等待"/>
 
@@ -242,7 +239,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/dim5"
                 android:layout_weight="1"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:text="再出发"/>
 
             <Button
