--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="dim1">1dp</dimen>
     <dimen name="dim_64">64dp</dimen>
+    <dimen name="dim96">96dp</dimen>
 </resources>
