--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="t999999">#999999</color>
     <color name="red">#e24949</color>
     <color name="trans">#00ffffff</color>
+    <color name="tE64340">#E64340</color>
 </resources>
