--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="red">#e24949</color>
     <color name="trans">#00ffffff</color>
     <color name="tE64340">#E64340</color>
+    <color name="black">#000000</color>
 </resources>
