--- a/app/src/main/res/layout/act_setting.xml
+++ b/app/src/main/res/layout/act_setting.xml
@@ -1,40 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/ll_setting"
     android:orientation="vertical">
+    <include layout="@layout/inc_toolbar_title"></include>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:background="@color/colorPrimaryDark"
-        android:paddingTop="@dimen/dim10"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dim10"
-             />
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text=""
-            android:textColor="@color/white"
-            android:textSize="19sp" />
-
-        <ImageView
-            android:id="@+id/iv_right"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dim10" />
-    </LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
     <RelativeLayout
         android:id="@+id/rl_version_upgrade"
         android:layout_width="match_parent"
@@ -58,8 +34,11 @@
             android:layout_alignParentRight="true"
             android:textSize="14sp"
             android:text=""/>
-
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_go_gary"/>
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
@@ -92,7 +71,11 @@
         android:layout_height="1dp"
         android:background="@color/tcccccc"
         android:layout_marginLeft="@dimen/dim15"/>
-
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
     <TextView
         android:id="@+id/tv_log_out"
         android:layout_width="match_parent"
@@ -100,9 +83,10 @@
         android:background="@drawable/shape_rec_normal"
         android:layout_marginLeft="@dimen/dim25"
         android:layout_marginRight="@dimen/dim25"
-        android:layout_gravity="bottom"
+
         android:textSize="18sp"
         android:gravity="center"
-        android:textColor="@color/white"
+        android:textColor="@color/secondary_text"
         android:text="@string/log_out"/>
+    </LinearLayout>
 </LinearLayout>
