--- a/app/src/main/res/layout/act_setting.xml
+++ b/app/src/main/res/layout/act_setting.xml
@@ -74,8 +74,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_log_out"
         android:layout_width="match_parent"
@@ -83,7 +82,7 @@
         android:background="@drawable/shape_rec_normal"
         android:layout_marginLeft="@dimen/dim25"
         android:layout_marginRight="@dimen/dim25"
-
+        android:layout_marginBottom="77dp"
         android:textSize="18sp"
         android:gravity="center"
         android:textColor="@color/secondary_text"
