--- a/app/src/main/res/layout/act_verdion_upgrade.xml
+++ b/app/src/main/res/layout/act_verdion_upgrade.xml
@@ -5,50 +5,13 @@
     android:id="@+id/rl_update"
     android:background="@color/white">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/ic_launcher"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dim48"
-        android:gravity="center_vertical"
-        android:background="@color/colorPrimaryDark"
-        android:paddingTop="@dimen/dim10"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dim10"
-             />
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text=""
-            android:textColor="@color/white"
-            android:textSize="19sp" />
-
-        <ImageView
-            android:id="@+id/iv_right"
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dim10" />
-    </LinearLayout>
+        <include layout="@layout/inc_toolbar_title"></include>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,10 +46,11 @@
         android:background="@drawable/rect_dlg_ok_cancel_backgroud"
         android:layout_marginLeft="@dimen/dim25"
         android:layout_marginRight="@dimen/dim25"
-        android:layout_marginBottom="@dimen/dim75"
-        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="77dp"
         android:textSize="18sp"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:text="@string/update"/>
+        android:textColor="@color/black"
+        android:text="@string/update"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
